<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clHomePost"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="#FFFFFF"
    android:elevation="4dp"
    android:layout_marginBottom="8dp">

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_user_profile_picture"/>

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/jorge"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/ivProfilePicture"
        app:layout_constraintTop_toTopOf="@id/ivProfilePicture" />

    <TextView
        android:id="@+id/tvUserTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/software_engineer_at_xyz_company"
        android:textSize="12sp"
        android:textColor="#666666"
        app:layout_constraintStart_toEndOf="@id/ivProfilePicture"
        app:layout_constraintTop_toBottomOf="@id/tvUsername" />

    <ImageButton
        android:id="@+id/ibOptions"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackground"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivProfilePicture"
        app:srcCompat="@drawable/ic_dots_menu"/>

    <TextView
        android:id="@+id/tvPostContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/this_is_an_example_of_a_linkedin_post_here_is_where_the_content_of_the_post_will_be_displayed"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivProfilePicture" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPostContent"
        app:srcCompat="@drawable/img_cat"/>

    <LinearLayout
        android:id="@+id/llMainOptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:id="@+id/ibLike"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:padding="2dp"
                app:srcCompat="@drawable/ic_like" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recomendar"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:id="@+id/ibComment"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:padding="2dp"
                app:srcCompat="@drawable/ic_comment"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comentar"
                android:textSize="10sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:id="@+id/ibShare"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:padding="2dp"
                app:srcCompat="@drawable/ic_share"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compartir"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:id="@+id/ibSave"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:padding="2dp"
                app:srcCompat="@drawable/ic_send" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enviar"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
